--- a/MngrPaycheck/View/MainWindow.xaml
+++ b/MngrPaycheck/View/MainWindow.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="auto" Width="auto"
-        WindowStartupLocation="CenterScreen" WindowState="Maximized" MinHeight="600" MinWidth="600">
+        
+        WindowStartupLocation="CenterScreen" WindowState="Maximized" MinHeight="600" MinWidth="950">
 
     <Grid Background="Gainsboro">
        <Grid.RowDefinitions>
@@ -54,8 +55,8 @@
                     <RowDefinition Height="1*"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Image Grid.Row="0" Source="Pictures/System.png"></Image>
-                <Label Grid.Row="1" Content="System" FontSize="17" FontWeight="Bold" HorizontalAlignment="Center" Margin="-10"></Label>
-                <Label Grid.Row="2" Content="Display, power" FontSize="17" HorizontalAlignment="Center" Margin="-20"></Label>
+                <Label Grid.Row="1" Content="System"  Style="{StaticResource lbl-header}"></Label>
+                <Label Grid.Row="2" Content="Display, power" Style="{StaticResource lbl-description}"></Label>
             </Grid>
 
             <Grid Grid.Row="2" Grid.Column="2" Cursor="Hand">
@@ -75,8 +76,8 @@
                     <RowDefinition Height="1*"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Image Grid.Row="0" Source="Pictures/Devices.png"></Image>
-                <Label Grid.Row="1" Content="Devices" FontSize="17" FontWeight="Bold" HorizontalAlignment="Center"></Label>
-                <Label Grid.Row="2" Content="Printer" FontSize="17" HorizontalAlignment="Center"></Label>
+                <Label Grid.Row="1" Content="Devices" Style="{StaticResource lbl-header}"/>
+                <Label Grid.Row="2" Content="Printer" Style="{StaticResource lbl-description}"/>
             </Grid>
 
             <Grid Grid.Row="2" Grid.Column="3" Cursor="Hand">
@@ -96,8 +97,8 @@
                     <RowDefinition Height="1*"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Image Grid.Row="0" Source="Pictures/Account.png"></Image>
-                <Label Grid.Row="1" Content="Accounts" FontSize="17" FontWeight="Bold" HorizontalAlignment="Center"></Label>
-                <Label Grid.Row="2" Content="Your account" FontSize="17" HorizontalAlignment="Center"></Label>
+                <Label Grid.Row="1" Content="Accounts" Style="{StaticResource lbl-header}"/>
+                <Label Grid.Row="2" Content="Your account" Style="{StaticResource lbl-description}"/>
             </Grid>
 
             <Grid Grid.Row="2" Grid.Column="4" Cursor="Hand">
@@ -117,8 +118,8 @@
                     <RowDefinition Height="1*"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Image Grid.Row="0" Source="Pictures/Privacy.png"></Image>
-                <Label Grid.Row="1" Content="Accounts" FontSize="17" FontWeight="Bold" HorizontalAlignment="Center"></Label>
-                <Label Grid.Row="2" Content="Your account" FontSize="17" HorizontalAlignment="Center"></Label>
+                <Label Grid.Row="1" Content="Accounts" Style="{StaticResource lbl-header}"     ></Label>
+                <Label Grid.Row="2" Content="Your account" Style="{StaticResource lbl-description}"></Label>
             </Grid>
         </Grid>
     </Grid>
