--- a/MngrPaycheck/View/Style/StyleResourceDictionary.xaml
+++ b/MngrPaycheck/View/Style/StyleResourceDictionary.xaml
@@ -1,4 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
+    <Style x:Key="lbl-header">
+        <Setter Property="Label.FontWeight" Value="Bold"/>
+        <Setter Property="Label.HorizontalAlignment" Value="Center"/>
+        <Setter Property="Label.Margin" Value="-10"></Setter>
+        <Setter Property="Label.FontSize" Value="17"></Setter>
+    </Style>
+
+    <Style x:Key="lbl-description" BasedOn="{StaticResource lbl-header}">
+        <Setter Property="Label.FontWeight" Value="Normal"/>
+        <Setter Property="Label.Margin" Value="-15"></Setter>
+    </Style>
 </ResourceDictionary>
