--- a/MngrPaycheck.Administrator/View/Product/Pages/Top.xaml
+++ b/MngrPaycheck.Administrator/View/Product/Pages/Top.xaml
@@ -4,10 +4,10 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="50" d:DesignWidth="600"
+      d:DesignHeight="20" d:DesignWidth="600"
 	Title="Top">
 
-    <Grid Background="#FF58BEEE">
+    <Grid Background="#F0F0F0">
         <StackPanel VerticalAlignment="Top">
             <Menu Width="Auto" Height="23" VerticalAlignment="Center" FontSize="13">
                 <MenuItem Header="_File">
