--- a/MngrPaycheck.Administrator/View/Product/Pages/AddType.xaml
+++ b/MngrPaycheck.Administrator/View/Product/Pages/AddType.xaml
@@ -9,7 +9,7 @@
 
     <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.5*"></RowDefinition>
+            <RowDefinition Height="0.6*"></RowDefinition>
             <RowDefinition Height="0.6*"></RowDefinition>
             <RowDefinition Height="10*"/>
             <RowDefinition Height="1.5*"></RowDefinition>
@@ -20,7 +20,7 @@
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
 
-        <Label FontSize="12"  Grid.Row="0" Grid.ColumnSpan="2" Background="#FFE2E2E2" FontFamily="Candara" FontStyle="Italic" Foreground="#FF595959">Panel of menu</Label>
+        <Label FontSize="12"  Grid.Row="0" Grid.ColumnSpan="2" Background="#FFE2E2E2" FontFamily="Candara" FontStyle="Italic" Foreground="#FF595959" VerticalAlignment="Center">Add type to products</Label>
         <Border Grid.Row="1" Grid.ColumnSpan="2" BorderThickness="0,2,0,0" Background="#EEf5f9">
             <ToolBar HorizontalAlignment="Left">
                 <Menu  FontSize="13" FontFamily="arial" Background="#EEf5f9" VerticalAlignment="Center" HorizontalAlignment="Center">
@@ -42,34 +42,19 @@
             </Menu>
             </ToolBar>
         </Border>
+        <TextBox Grid.Column="1" Grid.Row="1" Margin="3,3,3,3"  Background="#EEf5f9" FontSize="10" VerticalAlignment="Center"> your </TextBox>
 
-
-        <!--<ListView Name="UserGrid" Grid.Row="1" Grid.Column="1" ItemsSource="{Binding Products}"  Margin="10,10,10,10" FontFamily="Arial" FontSize="13"  >
-            <ListView.View>
-                <GridView x:Name="grdTest">
-                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"  Width="100"/>
-                    <GridViewColumn Header="Cost" DisplayMemberBinding="{Binding Cost}"  Width="100" />
-                    <GridViewColumn Header="Units" DisplayMemberBinding="{Binding Units}" Width="120" />
-                    <GridViewColumn Header="ProductType" DisplayMemberBinding="{Binding ProductType}" Width="120" />
-                </GridView>
-            </ListView.View>
-        </ListView>-->
-
-        <!--<Grid Grid.Row="1" Grid.Column="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="1*"/>
-                <RowDefinition Height="1*"/>
-                <RowDefinition Height="1*"/>
-                <RowDefinition Height="1*"/>
-                <RowDefinition Height="1*"/>
-                <RowDefinition Height="5*"/>
-            </Grid.RowDefinitions>
-
-            
-            <TextBox   Name="txtAddType" Text="{Binding ElementName=UserGrid,Path=SelectedItem.Cost}" Grid.Row="2"   Style="{StaticResource SidebarTxtBoxEditing}" VerticalAlignment="Stretch" Margin="5,5,5,5"/>
-            <Button Content="Add" Grid.Row="3" Grid.Column="0" Name="btnAdd" Command="{Binding Path=AddCommand}" Margin="5,5,5,5" FontFamily="Arial" FontWeight="13"/>
-            <Button Content="Update" Grid.Row="4" Grid.Column="0" Name="btnUpdate" Command="{Binding Path=UpdateCommad}" Margin="5,5,5,5"/>
-
-        </Grid>-->
+        <Border Grid.Row="2" Grid.ColumnSpan="2" BorderThickness="3,3,3,3" Background="#EEf5f9">
+            <ListView Name="UserGrid" Grid.Row="2" Grid.ColumnSpan="2" ItemsSource="{Binding Products}"  Margin="10,10,10,10" FontFamily="Arial" FontSize="12"  >
+                <ListView.View>
+                    <GridView x:Name="grdTest">
+                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"  Width="100"/>
+                        <GridViewColumn Header="Cost" DisplayMemberBinding="{Binding Cost}"  Width="100" />
+                        <GridViewColumn Header="Units" DisplayMemberBinding="{Binding Units}" Width="100" />
+                        <GridViewColumn Header="ProductType" DisplayMemberBinding="{Binding ProductType}" Width="100" />
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </Border>
     </Grid>
 </Page>
