--- a/MngrPaycheck.Administrator/App.xaml
+++ b/MngrPaycheck.Administrator/App.xaml
@@ -1,12 +1,10 @@
-﻿<Application x:Class="MngrPaycheck.Administrator.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="View/Product/MainWindowProduct.xaml">
-    <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Content/Style/AStyleResourcedictionary.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
+<Application x:Class="MngrPaycheck.Administrator.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" StartupUri="View/Product/MainWindowProduct.xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
+  <Application.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Content/Style/AStyleResourcedictionary.xaml">
         </ResourceDictionary>
-    </Application.Resources>
+      </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
