--- a/MngrPaycheck.Administrator/View/Product/Pages/AddType.xaml
+++ b/MngrPaycheck.Administrator/View/Product/Pages/AddType.xaml
@@ -1,18 +1,17 @@
 ﻿<Page x:Class="MngrPaycheck.Administrator.View.Product.Pages.AddType"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       d:DesignHeight="500" d:DesignWidth="700"
-	Title="AddType">
+	Title="Editing">
 
-    <Grid Background="White">
+    <Grid Style="{StaticResource GridPage}">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.6*"></RowDefinition>
             <RowDefinition Height="0.6*"></RowDefinition>
-            <RowDefinition Height="10*"/>
-            <RowDefinition Height="1.5*"></RowDefinition>
+            <RowDefinition Height="11*"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -20,38 +19,38 @@
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
 
-        <Label FontSize="12"  Grid.Row="0" Grid.ColumnSpan="2" Background="#FFE2E2E2" FontFamily="Candara" FontStyle="Italic" Foreground="#FF595959" VerticalAlignment="Center">Add type to products</Label>
-        <Border Grid.Row="1" Grid.ColumnSpan="2" BorderThickness="0,2,0,0" Background="#EEf5f9">
-            <ToolBar HorizontalAlignment="Left">
-                <Menu  FontSize="13" FontFamily="arial" Background="#EEf5f9" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <MenuItem Margin="0" Width="25" >
-                    <MenuItem.Icon>
-                        <Image Source="../../../Content/Images/Exit.png"></Image>
-                    </MenuItem.Icon>
-                </MenuItem>
-                    <MenuItem Width="25">
-                    <MenuItem.Icon>
-                        <Image Source="../../../Content/Images/options.png"></Image>
-                    </MenuItem.Icon>
-                </MenuItem>
-                    <MenuItem Width="25">
-                    <MenuItem.Icon>
-                        <Image Source="../../../Content/Images/About.png"></Image>
-                    </MenuItem.Icon>
-                </MenuItem>
-            </Menu>
+        <Label Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource TopSign}">Add type to products</Label>
+        <Border Grid.Row="1" Grid.ColumnSpan="2" Style="{StaticResource Border}">
+            <ToolBar Style="{StaticResource ToolBar}">
+                <Menu Style="{StaticResource TopMenu}">
+                    <MenuItem Width="25" Command="{Binding AddProductTypeCommand}" >
+                        <MenuItem.Icon>
+                            <Image Source="../../../Content/Images/Add.png"></Image>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Width="25" Command="{Binding Path=UpdateProductCommand}">
+                        <MenuItem.Icon>
+                            <Image Source="../../../Content/Images/Update.png"></Image>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Width="25" Command="{Binding RemoveBookCommand}">
+                        <MenuItem.Icon>
+                            <Image Source="../../../Content/Images/Delete.png"></Image>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </Menu>
             </ToolBar>
         </Border>
-        <TextBox Grid.Column="1" Grid.Row="1" Margin="3,3,3,3"  Background="#EEf5f9" FontSize="10" VerticalAlignment="Center"> your </TextBox>
-
-        <Border Grid.Row="2" Grid.ColumnSpan="2" BorderThickness="3,3,3,3" Background="#EEf5f9">
-            <ListView Name="UserGrid" Grid.Row="2" Grid.ColumnSpan="2" ItemsSource="{Binding Products}"  Margin="10,10,10,10" FontFamily="Arial" FontSize="12"  >
+        <TextBox Grid.Column="1" Grid.Row="1" Margin="3,3,3,3"  Background="#EEf5f9" FontSize="10" VerticalAlignment="Center" Text="{Binding ProductType.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        
+        <Border Grid.Row="3" Grid.ColumnSpan="2" Style="{StaticResource BorderListView}">
+            <ListView Name="UserGrid" ItemsSource="{Binding Products}" SelectedItem="{Binding SelectedProduct}" Style="{StaticResource ListViewAll}">
                 <ListView.View>
                     <GridView x:Name="grdTest">
-                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"  Width="100"/>
-                        <GridViewColumn Header="Cost" DisplayMemberBinding="{Binding Cost}"  Width="100" />
-                        <GridViewColumn Header="Units" DisplayMemberBinding="{Binding Units}" Width="100" />
-                        <GridViewColumn Header="ProductType" DisplayMemberBinding="{Binding ProductType}" Width="100" />
+                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name, Mode=TwoWay}"  Width="100"/>
+                        <GridViewColumn Header="Cost" DisplayMemberBinding="{Binding Cost, Mode=TwoWay}"  Width="100" />
+                        <GridViewColumn Header="Units" DisplayMemberBinding="{Binding Units, Mode=TwoWay}" Width="100" />
+                        <GridViewColumn Header="ProductType" DisplayMemberBinding="{Binding ProductType.Name}" Width="100" />
                     </GridView>
                 </ListView.View>
             </ListView>
