--- a/MngrPaycheck.Administrator/View/Product/MainWindowProduct.xaml
+++ b/MngrPaycheck.Administrator/View/Product/MainWindowProduct.xaml
@@ -14,12 +14,12 @@
 
         <Grid Grid.Row="0" Grid.ColumnSpan="3">
             <DockPanel>
-                <Frame x:Name="Top1" />
+                <Frame x:Name="Top1" Source="Pages/Top.xaml" />
             </DockPanel>
         </Grid>
         <Grid Grid.Row="1" Grid.Column="0">
             <DockPanel>
-                <Frame x:Name="LSidebar"/>
+                <Frame x:Name="LSidebar" Source="Pages/LSidebar.xaml"></Frame>
             </DockPanel>
         </Grid>
         <GridSplitter Background="White"  Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Width="3"/>
@@ -27,7 +27,7 @@
         <Border Grid.Row="1" Grid.Column="1"  BorderBrush="#FFA6A5A5"  BorderThickness="2,2,2,2">
         <Grid Margin="2,2,2,2">
             <DockPanel>
-                <Frame x:Name="Pages"/>
+                <Frame x:Name="Pages" Source="Pages/AddType.xaml"/>
             </DockPanel>
         </Grid>
            </Border>
