--- a/MngrPaycheck.Administrator/View/Product/MainWindowProduct.xaml
+++ b/MngrPaycheck.Administrator/View/Product/MainWindowProduct.xaml
@@ -1,7 +1,11 @@
 ﻿<Window x:Class="MngrPaycheck.Administrator.View.Product.MainWindowProduct"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:viewModel="clr-namespace:MngrPaycheck.Administrator.ViewModel"
         Title="MainWindowProduct" Height="600" Width="1100">
+    <Window.DataContext>
+        <viewModel:MainWindowVM/>
+    </Window.DataContext>
     <Grid Background="Ivory">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.6*"/>
@@ -18,19 +22,69 @@
             </DockPanel>
         </Grid>
         <Grid Grid.Row="1" Grid.Column="0">
-            <DockPanel>
-                <Frame x:Name="LSidebar" Source="Pages/LSidebar.xaml"></Frame>
-            </DockPanel>
+            <Border Grid.Row="0" Grid.RowSpan="4" Background="#FFA7A7B6" BorderBrush="#FFA6A5A5"  BorderThickness="0,2,0,0">
+                <Menu  FontSize="13" FontFamily="arial" Margin="2,2,2,2" >
+                    <Label FontSize="10" FontFamily="Candara" FontStyle="Italic" Foreground="#FF595959">Main panel</Label>
+                    <MenuItem Header="_Add a product" Command="{Binding ShowProductCommand}"  CommandParameter="{Binding ElementName=Pages}">
+                        <MenuItem.Icon >
+                            <Image Source="../../Content/Images/Exit.png"></Image>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <Separator />
+                    <MenuItem Header="_Add a type to product" Command="{Binding ShowProductTypeCommand}"  CommandParameter="{Binding ElementName=Pages}">
+                        <MenuItem.Icon>
+                            <Image Source="../../Content/Images/options.png"></Image>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Add parameters product" Command="{Binding ShowParameterCommand}"  CommandParameter="{Binding ElementName=Pages}">
+                        <MenuItem.Icon>
+                            <Image Source="../../Content/Images/About.png"></Image>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Add param to product" Command="{Binding ShowValueToParameterCommand}"  CommandParameter="{Binding ElementName=Pages}">
+                        <MenuItem.Icon>
+                            <Image Source="../../Content/Images/Devices.png"></Image>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </Menu>
+            </Border>
         </Grid>
         <GridSplitter Background="White"  Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Width="3"/>
 
         <Border Grid.Row="1" Grid.Column="1"  BorderBrush="#FFA6A5A5"  BorderThickness="2,2,2,2">
-        <Grid Margin="2,2,2,2">
-            <DockPanel>
-                <Frame x:Name="Pages" Source="Pages/AddType.xaml"/>
-            </DockPanel>
-        </Grid>
-           </Border>
-        
+            <Grid Margin="2,2,2,2" Background="#EEf5f9">
+                <DockPanel>
+                    <Frame x:Name="Pages" Source="Pages/Editing.xaml">
+                        <Frame.Template>
+                            <ControlTemplate TargetType="Frame">
+                                <DockPanel>
+                                    <StackPanel Visibility="Visible" Orientation="Horizontal" DockPanel.Dock="Top">
+                                        <!--<Button Content="Go back!"   Command="{x:Static NavigationCommands.BrowseBack}" IsEnabled="{TemplateBinding CanGoBack}">
+                                        </Button>
+                                        <Button Content="Forward you dogs!" Command="{x:Static NavigationCommands.BrowseForward}" IsEnabled="{TemplateBinding CanGoForward}" />-->
+                                        <Menu Style="{StaticResource TopMenu}">
+                                            <MenuItem Width="20" Command="{x:Static NavigationCommands.BrowseBack}" IsEnabled="{TemplateBinding CanGoBack}" Height="18" Cursor="Hand">
+                                                <MenuItem.Icon>
+                                                    <Image Source="../../Content/Images/backF.png"></Image>
+                                                </MenuItem.Icon>
+                                            </MenuItem>
+                                            <MenuItem Width="20" Command="{x:Static NavigationCommands.BrowseForward}" IsEnabled="{TemplateBinding CanGoForward}" Height="18" Cursor="Hand">
+                                                <MenuItem.Icon>
+                                                    <Image Source="../../Content/Images/forwardG.png"></Image>
+                                                </MenuItem.Icon>
+                                            </MenuItem>
+                                        </Menu>
+                                    </StackPanel>
+                                    <Border>
+                                        <ContentPresenter />
+                                    </Border>
+                                </DockPanel>
+                            </ControlTemplate>
+                        </Frame.Template>
+                    </Frame>
+                </DockPanel>
+            </Grid>
+        </Border>
+
     </Grid>
 </Window>
